通过SVG转Canvas来获取PNG

--- a/src/css-gradient-generator.css
+++ b/src/css-gradient-generator.css
@@ -1,5 +1,5 @@
 
-@import url('http://fonts.googleapis.com/css?family=Droid+Sans|Monda');
+@import url('../resources/family.css');
 
 @media (min-width: 768px) {
   .container {
@@ -1071,4 +1071,12 @@ css-gradient-editor-container.layout-simple .hide-element {
 .layout-warning-advanced,
 .layout-warning-expert {
   display: none;
+}
+
+.hide-canvas{
+	width:0;
+	height:0;
+	overflow:hidden;
+	display:block;
+	display:none;
 }
